--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,7 @@
   --color-primary: #4f4f4f;
   --color-secondary: #333;
   --color-invert: #fefefe;
+  --color-background: #f3f1ee;
 
   --color-text-action: #fefefe;
   --color-background-action: #66ac66;
@@ -46,6 +47,29 @@ body {
   font-size: 16px;
   font-weight: 400;
   line-height: 1.5;
+  background-color: var(--color-background);
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin-top: 0;
+}
+
+/* Header */
+.container {
+  width: 1168px;
+  margin: 0 auto;
 }
 
 .header-link {
@@ -66,7 +90,20 @@ body {
   background-color: var(--color-background-action);
 }
 
+.section {
+  padding: 64px 0;
+}
+
+/* Hero-section */
+.hero-section {
+  padding: 32px 0 64px;
+}
+
 .hero-title {
+  /* margin-top: 0;
+  margin-bottom: 24px; */
+  margin: 0 0 24px;
+
   color: var(--color-secondary);
   font-size: 36px;
   font-weight: 500;
@@ -79,7 +116,12 @@ body {
   /* text-shadow: 2px 2px 4px violet; */
 }
 
+.hero-text {
+  margin: 0 0 40px;
+}
+
 .heading-title {
+  margin: 0 0 8px;
   color: var(--color-heading-title);
   font-size: 24px;
   line-height: 1.33;
@@ -91,8 +133,32 @@ body {
 } */
 
 .heading-subtitle {
+  margin: 0 0 40px;
   color: var(--color-heading-subtitle);
   font-size: 36px;
   font-weight: 500;
   line-height: 1.33;
+}
+
+/* Advantage-section */
+.advantage-card {
+  padding: 32px 40px;
+  border-radius: 8px;
+  margin-bottom: 32px;
+}
+
+.advantage-card:hover {
+  background-color: var(--color-invert);
+}
+
+.advantage-card-img {
+  margin-bottom: 16px;
+}
+
+.advantage-card-title {
+  margin-bottom: 8px;
+}
+
+.advantage-card-text {
+  margin-bottom: 0;
 }
